--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.androidsample">
+    package="com.example.androidsample" >
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".presentation.main.MainActivity">
+        android:theme="@style/AppTheme" >
+        <activity android:name="com.example.androidsample.presentation.activity.RootActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
